--- a/Mobile/app/src/main/res/values/strings.xml
+++ b/Mobile/app/src/main/res/values/strings.xml
@@ -32,9 +32,10 @@
     <string name="SignUp_Postal">Postal Code</string>
     <string name="SignUp_Dog_Name">Dog Name</string>
 
-    <string name ="Login_SignIn">Sign In</string>
-    <string name ="Login_Connect">Please Connect</string>
+    <string name="Login_SignIn">Sign In</string>
+    <string name="Login_Connect">Please Connect</string>
     <string name="Login_Create">Create Account</string>
     <string name="Login_Forget">Forgot your password ?</string>
+    <string name="title_activity_payer_commande">Payer une commande</string>
 
 </resources>
