Ajout du visuel de l'activity order

--- a/Mobile/app/src/main/res/values/strings.xml
+++ b/Mobile/app/src/main/res/values/strings.xml
@@ -38,4 +38,10 @@
     <string name="Login_Forget">Forgot your password ?</string>
     <string name="title_activity_payer_commande">Payer une commande</string>
 
+
+    <!-- String related to order -->
+    <string name="Order_Next"> Order </string>
+    <string name="Order_End"> Bill </string>
+    <string name="Order_ajouter"> Add </string>
+
 </resources>
