--- a/Mobile/app/src/main/res/values/strings.xml
+++ b/Mobile/app/src/main/res/values/strings.xml
@@ -43,5 +43,10 @@
     <string name="Order_Next"> Order </string>
     <string name="Order_End"> Bill </string>
     <string name="Order_ajouter"> Add </string>
+    <string name="Ordre_Plus"> + </string>
+    <string name="Ordre_Minus"> - </string>
+    <string name="Order_Ajouter"> Add </string>
+    <string name="Order_Cancel"> Cancel </string>
+
 
 </resources>
