rajout du boutton dans le layout de choix de resto

--- a/Mobile/app/src/main/res/values-fr/strings.xml
+++ b/Mobile/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,6 @@
     <string name="Resto_Province"> Province </string>
     <string name="Resto_City"> Ville </string>
     <string name="Resto_Resto"> Restaurant </string>
+
+    <string name="Resto_Btn"> Confirmer </string>
 </resources>
