finalisation de choix de resto
marche quand même pas du au fait que l'on ne peut pas accéder a la BD

--- a/Mobile/app/src/main/res/values/strings.xml
+++ b/Mobile/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <!-- String related to Resto -->
     <string name="Resto_Province"> Province </string>
     <string name="Resto_City"> City </string>
-    <string name="Resto_Resto"> Restorant </string>
+    <string name="Resto_Resto"> Restaurant </string>
     <string name="Resto_Btn"> Confirm </string>
 
 
