--- a/Mobile/app/src/main/res/values/strings.xml
+++ b/Mobile/app/src/main/res/values/strings.xml
@@ -42,17 +42,18 @@
     <!-- String related to order -->
     <string name="Order_Next"> Order </string>
     <string name="Order_End"> Bill </string>
-    <string name="Order_ajouter"> Add </string>
-    <string name="title_activity_resto">RestoActivity</string>
     <string name="Ordre_Plus"> + </string>
     <string name="Ordre_Minus"> - </string>
     <string name="Order_Ajouter"> Add </string>
     <string name="Order_Cancel"> Cancel </string>
+    <string name="Order_Activity"> Order </string>
+
 
     <string name="action_settings">Settings</string>
 
     <!-- String related to Resto -->
     <string name="Resto_Province"> Province </string>
+    <string name="title_activity_resto">RestoActivity</string>
     <string name="Resto_City"> City </string>
     <string name="Resto_Resto"> Restaurant </string>
     <string name="Resto_Btn"> Confirm </string>
