--- a/Mobile/app/src/main/res/values/strings.xml
+++ b/Mobile/app/src/main/res/values/strings.xml
@@ -3,12 +3,12 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_meal_list">Meals</string>
-    <string name="title_meal_detail">Meal Detail</string>
+    <string name="title_meal_detail">Meal detail</string>
 
     <string name="name_info">"%1$s"</string>
     <string name="price_info">%1$s$</string>
     <string name="discount_info">(-%1$s%%) %2$s$</string>
-    <string name="meal_image">Image du repas</string>
+    <string name="meal_image">Meal image</string>
     <string name="description_label">Description</string>
     <string name="description_info">%1$s</string>
     <string name="allergies_label">Allergies</string>
@@ -23,9 +23,7 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="permission_rationale">"Contacts permissions are needed"</string>
     <string name="SignUp_First_Name">First Name</string>
     <string name="SignUp_Last_Name">Last Name</string>
     <string name="SignUp_Birth">Birth Date</string>
@@ -36,7 +34,7 @@
     <string name="Login_Connect">Please Connect</string>
     <string name="Login_Create">Create Account</string>
     <string name="Login_Forget">Forgot your password ?</string>
-    <string name="title_activity_payer_commande">Payer une commande</string>
+    <string name="title_activity_payer_commande">Pay Order</string>
 
 
     <!-- String related to order -->
