--- a/Mobile/app/src/main/res/values-fr/strings.xml
+++ b/Mobile/app/src/main/res/values-fr/strings.xml
@@ -10,7 +10,7 @@
     <string name="error_incorrect_password">ce mot de passe est invalide</string>
     <string name="error_field_required">ce champs est obligatoire</string>
     <string name="Login_SignIn">Se Connecter</string>
-    <string name="Login_Connect">Veullez vous connectez</string>
+    <string name="Login_Connect">Veuillez vous connectez</string>
     <string name="Login_Create">Créer un compte</string>
     <string name="Login_Forget">Mot de passe oublié ?</string>
 
@@ -29,4 +29,32 @@
     <string name="Order_Activity"> Commande </string>
 
     <string name="Resto_Btn"> Confirmer </string>
+
+    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
+    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>
+    <string name="title_meal_list">Repas</string>
+    <string name="title_meal_detail">Detail de repas</string>
+
+    <string name="name_info">"%1$s"</string>
+    <string name="price_info">%1$s$</string>
+    <string name="discount_info">(-%1$s%%) %2$s$</string>
+    <string name="meal_image">Image du repas</string>
+    <string name="description_label">Description</string>
+    <string name="description_info">%1$s</string>
+    <string name="allergies_label">Allergies</string>
+    <string name="title_activity_sign_up">Connexion</string>
+
+    <!-- Strings related to login -->
+    <string name="action_sign_in">Inscription</string>
+    <string name="action_sign_in_short">Connexion</string>
+    <string name="permission_rationale">Information supplementaire necessaire</string>
+    <string name="SignUp_First_Name">Prénom</string>
+    <string name="SignUp_Last_Name">Nom de famille</string>
+    <string name="SignUp_Birth">Date de naissance</string>
+    <string name="SignUp_Postal">Code postal</string>
+    <string name="SignUp_Dog_Name">Nom du chien</string>
+
+    <string name="title_activity_payer_commande">Payer la commande</string>
+
+    <string name="action_settings">Configuration</string>
 </resources>
