--- a/Mobile/app/src/main/res/values/strings.xml
+++ b/Mobile/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="error_with_query">an error occured while processing your query</string>
     <string name="permission_rationale">"Contacts permissions are needed"</string>
     <string name="SignUp_First_Name">First Name</string>
     <string name="SignUp_Last_Name">Last Name</string>
