--- a/Mobile/app/src/main/res/values/strings.xml
+++ b/Mobile/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="Order_Ajouter"> Add </string>
     <string name="Order_Cancel"> Cancel </string>
     <string name="Order_Activity"> Order </string>
+    <string name="Order_Waiter"> Call Waiter </string>
 
 
     <string name="action_settings">Settings</string>
