Ajout de la traduction française pour le bouton pour appeler le serveur

--- a/Mobile/app/src/main/res/values-fr/strings.xml
+++ b/Mobile/app/src/main/res/values-fr/strings.xml
@@ -28,6 +28,7 @@
     <string name="Order_Ajouter"> Ajouter </string>
     <string name="Order_Cancel"> Annuler </string>
     <string name="Order_Activity"> Commande </string>
+    <string name="Order_Waiter"> Appeler serveur </string>
 
     <string name="Resto_Btn"> Confirmer </string>
 
